# face_ver_lib

./: CMakeLists.txt  classifier.cpp  classifier.h  config.h.in  face_align.h  face_ver.cpp  verification.cpp
include/: face_align.h  verification.h
src/: face_align.cpp
